Opened 4 months ago

Closed 3 months ago

#19266 closed bug (fixed)

Regression: touchpad and trackpoint not working (probably after July 2022)

Reported by: fatigatti Owned by:
Priority: normal Milestone: R1/beta6
Component: Drivers/Input/PS2/Mouse Version: R1/beta5
Keywords: Cc: pulkomandy
Blocked By: Blocking:
Platform: All

Description

I have a Toshiba Portege Z30 laptop, which has both a trackpoint and a touchpad. Both were (and in fact are, just tested) working fine with R1/Beta 3.

They stopped working long ago and I didn't report, because I wasn't really active in the community at the time and in fact I wasn't sure that they were working in first place.

I suspect this is related to https://review.haiku-os.org/c/haiku/+/5388 as pulkomandy was looking for testers then but I wasn't around.

Relevant lines in syslog are the following, printed over and over:

KERN: ps2: hot plugin of input/mouse/ps2/0
KERN: ps2: device input/mouse/ps2/0 still active, republishing...
KERN: ps2: devfs_unpublish_device input/mouse/ps2/0, status = 0x80006003
KERN: ps2_dev: reset failed: I/O error
KERN: ps2: devfs_publish_device input/mouse/ps2/0, status = 0xffffffff

See also: https://discuss.haiku-os.org/t/testing-wanted-ps2-active-multiplexing-thinkpad-trackpoint-mainly/12282/5

Change History (8)

comment:1 by waddlesplash, 4 months ago

Cc: pulkomandy added
Keywords: touchpad trackpoint ps/2 mouse removed

comment:2 by fatigatti, 4 months ago

I compiled the PS/2 bus manager reverting some changes around the date (one by one) and found the culprit, which is not the one I was thinking but https://cgit.haiku-os.org/haiku/commit/?id=8a00ea4af6786937c1942241b9b0a03fb5d05a1e

Reverting that sole line (ie not using a timeout) fixes it for me. Both the touchpad and trackpoint works (and I can see a generic PS/2 mouse under Input, which wasn't there). Probably the timeout is too little (wrong unit maybe?).

comment:3 by waddlesplash, 4 months ago

Milestone: UnscheduledR1/beta6

comment:4 by pulkomandy, 4 months ago

This results in using the default timeout, not "not using a timeout".

On my machine, the driver detects a PS/2 multiplexer (which I think isn't really there), and then tries to initialize 4 mouse devices, each time waiting for this timeout. This results in several seconds where the PS/2 controller is busy, and I can't use my keyboard. And, trying to send keyboard commands during that period further confuses thigns for the controller, then I may end up with a completely unusable keyboard.

I will try to find a different way to get my system to work right. Until then, the change can be reverted.

comment:5 by waddlesplash, 4 months ago

Reverted in hrev58362. Leaving this ticket open since the other PS2-related failure tickets seem to be intermittent, while this one happened 100% of the time, so it should be retested once PulkoMandy comes up with an alternative fix.

comment:6 by pulkomandy, 4 months ago

I made changes in https://review.haiku-os.org/c/haiku/+/8632 to avoid the very long timeout at boot on my machine in a different way.

Please test it if you can on other machines with active multiplexing, to confirm it does not break those, and both the touchpad and trackpoint still work.

comment:7 by fatigatti, 4 months ago

Working OK for me (Toshiba Z30 with trackpoint and touchpad).

comment:8 by waddlesplash, 3 months ago

Resolution: fixed
Status: newclosed

Fix was merged in hrev58450.

Note: See TracTickets for help on using tickets.